[gd_scene load_steps=16 format=2]

[ext_resource path="res://02_Stage/A_Levels/res/cakeCenter.png" type="Texture" id=1]
[ext_resource path="res://02_Stage/A_Levels/res/castleCenter.png" type="Texture" id=2]
[ext_resource path="res://02_Stage/A_Levels/res/grassCenter.png" type="Texture" id=3]
[ext_resource path="res://02_Stage/A_Levels/res/chocoCenter.png" type="Texture" id=4]
[ext_resource path="res://02_Stage/A_Levels/src/LevelTemplate.gd" type="Script" id=5]
[ext_resource path="res://02_Stage/B_Players/Ecologist.tscn" type="PackedScene" id=6]
[ext_resource path="res://02_Stage/B_Players/Dispatcher.tscn" type="PackedScene" id=7]
[ext_resource path="res://02_Stage/B_Players/Explorer.tscn" type="PackedScene" id=8]
[ext_resource path="res://02_Stage/B_Players/Engineer.tscn" type="PackedScene" id=9]
[ext_resource path="res://02_Stage/C_Interfaces/EnergyBar.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=3]
0/name = "0_Cake"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "1_Dirt"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "2_Choco"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=5]
0/name = "castleCenter.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="LevelTemplate" type="Node2D"]
script = ExtResource( 5 )

[node name="Tile_Game" type="TileMap" parent="."]
tile_set = SubResource( 3 )
collision_layer = 80
format = 1
tile_data = PoolIntArray( 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 2, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 0, 0, 196622, 1, 0, 196623, 1, 0, 196624, 2, 0, 196625, 1, 0, 196626, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 2, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 0, 0, 262158, 1, 0, 262159, 1, 0, 262160, 2, 0, 262161, 1, 0, 262162, 1, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 1, 0, 327692, 1, 0, 327693, 0, 0, 327694, 1, 0, 327695, 1, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 2, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 0, 0, 393230, 1, 0, 393231, 1, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 0, 0, 458769, 1, 0, 458770, 1, 0, 524289, 0, 0, 524290, 0, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 0, 0, 524300, 2, 0, 524301, 2, 0, 524302, 1, 0, 524303, 1, 0, 524304, 0, 0, 524305, 1, 0, 524306, 1, 0, 589825, 0, 0, 589826, 0, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 1, 0, 589839, 1, 0, 589840, 2, 0, 589841, 1, 0, 589842, 1, 0 )

[node name="Dispatcher" parent="." instance=ExtResource( 7 )]
position = Vector2( 118.023, 577.882 )

[node name="Engineer" parent="." instance=ExtResource( 9 )]
position = Vector2( 635.95, 608.535 )

[node name="Explorer" parent="." instance=ExtResource( 8 )]
position = Vector2( 611.64, 608.535 )

[node name="Ecologist" parent="." instance=ExtResource( 6 )]
position = Vector2( 99.871, 355.056 )

[node name="Tile_Border" type="TileMap" parent="."]
tile_set = SubResource( 5 )
collision_layer = 64
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196621, 0, 0, 196627, 0, 0, 262144, 0, 0, 262157, 0, 0, 262163, 0, 0, 327680, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327693, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393220, 0, 0, 393229, 0, 0, 393232, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458768, 0, 0, 458771, 0, 0, 524288, 0, 0, 524299, 0, 0, 524304, 0, 0, 524307, 0, 0, 589824, 0, 0, 589835, 0, 0, 589843, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )

[node name="ProgressBar" parent="." instance=ExtResource( 10 )]
margin_left = 25.3707
margin_top = 15.7328
margin_right = 225.371
margin_bottom = 39.7328
[connection signal="collided" from="Dispatcher" to="." method="_on_Dispatcher_collided"]
[connection signal="energy_changed" from="Dispatcher" to="ProgressBar" method="_on_Dispatcher_energy_changed"]
[connection signal="collided" from="Engineer" to="." method="_on_Engineer_collided"]
[connection signal="collided" from="Explorer" to="." method="_on_Explorer_collided"]
[connection signal="collided" from="Ecologist" to="." method="_on_Ecologist_collided"]
